--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ path {
               <section>
 
                 <section>
-                  <h1> Extentions </h1>
+                  <h1> Extensions </h1>
 				    </section>
 
               <section>
