--- a/index.html
+++ b/index.html
@@ -171,8 +171,7 @@ path {
                     <h2> Collaboration and Community </h2>
                   </div>
                   <div  style="margin-left: 40px;">
-<!--                                        <img src="images/comm.png" alt="mock" height=569 width=552>-->
-<img src="images/comm.png" alt="mock" >
+                                       <img src="images/comm.png" alt="mock" height=569 width=552>
                   </div>
                 </div>
               </section>
